@@ -11,9 +11,10 @@ Patches and suggestions came from:
    Rustom Mody
    Robert Musial
      Nick Nikolov
+    Miika Oksman
 Sebastian Pipping
       Sam Sirlin
 
 Please let me know if I forgot you or if you want to be removed from the list.
-Oct-19-2013
+Oct-31-2013
 
