@@ -20,5 +20,6 @@
  4366  make library paths configurable in file(s) 'preferences'
  4366  fixed problem with ∇ in strings in Nabbla editor
  4388  fixed fault in Parser::remove_nongrouping_parantheses()
- 4397  improved error informstion for Svar sockets, changed to client port
-
+ 4397  improved error information for Svar sockets, changed to client port
+ 4414  made use of readline configurable
+ 4428  check for libpthread added, Debian Build-Depends on libc6 relaxed
